// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple bank Database
  '''
}


Table user as U {
  username varchar [pk]
  harsh_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_change_at timestamp [not null, default: '0001-01-01: 00:00:00Z']
  create_at timestamp [not null, default : 'now()']
}

Table account as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [default : 'now()']

  indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [not null, default : 'now()']

  indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [not null, default : 'now()']

  indexes {
    from_account_id
    to_account_id
    (from_account_id,to_account_id)
  }
}

